[project]
name = "voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[mcp]>=1.2.0",
    "livekit-plugins-deepgram>=1.2.14",
    "livekit-plugins-openai>=1.2.14",
    "livekit-plugins-silero>=1.2.14",
    "livekit-plugins-cartesia>=1.2.14",
    "python-dotenv>=1.1.1",
    "requests>=2.31.0",
    "httpx>=0.27.0",
]
